# rutube-hacks-ai-monorepo

./: .env  .gitmodules  Caddyfile  Dockerfile.frontend  README.md  docker-compose.yml  main.py  pyproject.toml
apps/av_keywords/: README.md  __init__.py  main.py  pyproject.toml
apps/backend/: Dockerfile  README.md  main.py  pyproject.toml
apps/client/: Dockerfile  README.md  bun.lockb  index.html  package.json  tsconfig.app.tsbuildinfo
apps/client/src/: app.tsx  form.tsx  index.css  loading.tsx  main.tsx  result.tsx
