[tool.poetry]
name = "rutube-cp"
version = "0.1.0"
description = ""
authors = ["Kravets <57632712+kravetsone@users.noreply.github.com>"]
readme = "README.md"
# packages = [{ include = "av-keywords" }]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
pydantic = "^2.9.2"
python-multipart = "^0.0.10"
aiofiles = "^24.1.0"
# av-keywords = { path = "../av-keywords", develop = true }
av = "^13.0.0"
transformers = "^4.45.1"
torch = "^2.4.1"
accelerate = "^0.34.2"
pillow = "^10.4.0"
protobuf = "^5.28.2"
sentencepiece = "^0.2.0"
numpy = "^2.1.1"
pydub = "^0.25.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
